--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,16 @@
     <link rel="shortcut icon" href="#" />
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
-    <link rel="apple-touch-icon" href="/assets/apple-touch-icon-180x180.png" />
+    <link rel="apple-touch-icon" href="/assets/apple-icon-180x180.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-icon-180x180.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/apple-icon-57x57.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1, interactive-widget=resizes-content" />
     <style>
