--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>LibreChat</title>
   <meta name="description" content="An open source chat application with support for multiple AI models" />
   
@@ -10,12 +10,31 @@
   <link rel="icon" href="/assets/favicon-32x32.png" />
   <link rel="apple-touch-icon" href="/assets/apple-touch-icon-180x180.png" sizes="180x180" />
   <link rel="mask-icon" href="/assets/maskable-icon.png" color="#171717" />
-  <meta name="theme-color" content="#171717" />
+  <meta name="theme-color" content="#171717" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#171717" media="(prefers-color-scheme: dark)" />
   
-  <!-- iOS PWA Configuration - Required for standalone mode -->
+  <!-- iOS PWA Configuration - Enhanced for iOS compatibility -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-title" content="LibreChat" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-touch-fullscreen" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="format-detection" content="telephone=no" />
+  
+  <!-- Additional iOS-specific meta tags for better PWA experience -->
+  <meta name="apple-mobile-web-app-orientation" content="portrait" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="HandheldFriendly" content="true" />
+  <meta name="MobileOptimized" content="width" />
+  
+  <!-- Additional Apple Touch Icons for better iOS support -->
+  <link rel="apple-touch-icon" href="/assets/apple-icon-120x120.png" sizes="120x120" />
+  <link rel="apple-touch-icon" href="/assets/apple-icon-152x152.png" sizes="152x152" />
+  <link rel="apple-touch-icon" href="/assets/apple-icon-180x180.png" sizes="180x180" />
+  
+  <!-- iOS Splash Screens for better launch experience -->
+  <link rel="apple-touch-startup-image" href="/assets/apple-icon-180x180.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" />
+  <link rel="apple-touch-startup-image" href="/assets/apple-icon-180x180.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" />
   
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json" />
